# StockAnalyzer

./: .gitignore  README.md  VISUALIZATION_PLAN.md  eastmoney.html  eastmoney_http.py  final_evaluation_llm_analyzer.py  index.html  llm.py  llm_config.example.json  main.py  pyproject.toml  requirements.txt  security_profile.py  start.bat  start.sh
api/: __init__.py  main.py
api/services/: __init__.py  analysis_runner.py  data_store.py
etf_fund/: __init__.py  eastmoney_etf_fund.py  etf_fund_cleaner.py  etf_fund_llm_analyzer.py
financial/: __init__.py  eastmoney_financial.py  financial_cleaner.py  financial_llm_analyzer.py
industry/: __init__.py  clean_industry.py  eastmoney_industry_data.py  industry_llm_analyzer.py
industry/data_cleaner/: __init__.py  capital_flow_cleaner.py  cleaning_common.py  index_cleaner.py  industry_capital_flow_cleaner.py  industry_trend_cleaner.py  industry_trend_file_cleaner.py  margin_trading_cleaner.py  market_cleaner.py  report_cleaner.py  valuation_cleaner.py
industry/get_data/: __init__.py  industry_capital_flow_fetcher.py  industry_common.py  industry_index.py  industry_margin_trading.py  industry_market.py  industry_report.py  industry_trend_fetcher.py  industry_valuation.py
notice_risk/: __init__.py  eastmoney_notice_risk.py  notice_risk_cleaner.py  notice_risk_llm_analyzer.py
stockcomment/: __init__.py  eastmoney_stockcomment.py  stockcomment_cleaner.py  stockcomment_llm_analyzer.py
valuation/: __init__.py  eastmoney_valuation.py  valuation_cleaner.py  valuation_llm_analyzer.py
